--- a/style/main.scss
+++ b/style/main.scss
@@ -61,6 +61,10 @@ body {
     }
   }
 
+  &__status-container {
+    margin-bottom: 10px;
+  }
+
   &__score-container {
     display: flex;
     justify-content: space-evenly;
