--- a/style/main.scss
+++ b/style/main.scss
@@ -85,3 +85,19 @@ body {
     padding-left: 5px;
   }
 }
+
+.play {
+  &__container {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__button {
+    font-family: "Fjalla One", sans-serif;
+    color:  black;
+    background-color: red;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+  }
+}
