--- a/style/main.scss
+++ b/style/main.scss
@@ -14,6 +14,8 @@ body {
   box-sizing: inherit;
 }
 
+//mixins
+
 body {
   background-image: url(../assets/hero-image.png);
   background-repeat: no-repeat;
@@ -30,12 +32,14 @@ body {
 }
 
 .header__title {
-  font-size: 30px;
+  font-size: 5vw;
+  margin-bottom: 0;
 }
 
 .pokemon {
   &__list {
     padding: 0;
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
     &-item {
       list-style-type: none;
     }
@@ -50,7 +54,8 @@ body {
 
 .game-arena {
   &__input {
-    width: 20vw;
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+    width: 100%;
     min-width: 250px;
     word-wrap: break-word;
     border-radius: 5px;
@@ -59,6 +64,14 @@ body {
     &:focus {
       outline: transparent;
     }
+  }
+
+  &__error-score {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  }
+
+  &__correct-score {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
   }
 
   &__status-container {
@@ -76,6 +89,7 @@ body {
   }
   &__timer {
     width: 100%;
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
     transition-timing-function: linear;
     background-color: rgb(255, 203, 5);
     border-radius: 5px;
@@ -94,10 +108,74 @@ body {
 
   &__button {
     font-family: "Fjalla One", sans-serif;
-    color:  black;
+    color: black;
+    font-weight: bold;
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
     background-color: red;
-    height: 50px;
-    width: 50px;
+    height: 6vw;
+    min-height: 50px;
+    width: 6vw;
+    min-width: 50px;
     border-radius: 50%;
+  }
+
+  &__instructions {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
+  }
+}
+
+.image__pokemon {
+  height: 5vw;
+  width: 5vw;
+  min-height: 50px;
+  min-width: 50px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.kudos__flat-icon {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
+//mixins to animate the images
+$images: 6;
+
+@mixin x-animation($seconds) {
+  animation: x #{random(10 * 100vw/100vh) + random($seconds)}s linear infinite
+    alternate;
+}
+
+@mixin y-animation($seconds) {
+  animation: y #{random(5 * 100vw/100vh) + random($seconds)}s linear infinite
+    alternate;
+}
+
+@mixin xy-create {
+  @for $i from 1 through $images {
+    .x#{$i} {
+      @include x-animation($i);
+    }
+
+    .y#{$i} {
+      @include y-animation($i);
+    }
+  }
+}
+
+@include xy-create;
+
+@keyframes x {
+  100% {
+    transform: translateX(calc(100vw - 100px));
+  }
+}
+
+@keyframes y {
+  100% {
+    transform: translateY(calc(100vh - 100px));
   }
 }
