--- a/style/main.scss
+++ b/style/main.scss
@@ -29,6 +29,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
+  position: relative;
 }
 
 .header__title {
